sumo/tests/netconvert/errors/errors/broken_edge/edge#type__false4/errors.netconvert
Error: Type 'xxx' used by edge '4' was not defined.
Quitting (on error).
